# otus_cpp_6

./: .travis.yml  CMakeLists.txt  README.md  matrix.cpp
include/: matrix.h
src/: matrix.cpp  matrix_demo.cpp
test/: CMakeLists.txt  test_2d.cpp  test_matrix.cpp
